# UNALProyectoFinal

./: .gitattributes  README.md  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md
scripts/eda/: main.py
